--- a/C0721G2-livestock-farm-FE/src/app/component/employee/employee-list/employee-list.component.html
+++ b/C0721G2-livestock-farm-FE/src/app/component/employee/employee-list/employee-list.component.html
@@ -22,7 +22,7 @@
 
           <li class="list-unstyled mb-2">
             <a class=" text-decoration-none hvr-sweep-to-right pleft0"
-               [routerLink]="['/employee/list']">
+               [routerLink]="['/cages/list']">
               <img src="https://cdn-icons-png.flaticon.com/512/1177/1177455.png"
                    height="20px">
               <span class="text-light">Quản lý chuồng nuôi</span>
