--- a/C0721G2-livestock-farm-FE/src/app/component/cages/cages-list/cages-list.component.html
+++ b/C0721G2-livestock-farm-FE/src/app/component/cages/cages-list/cages-list.component.html
@@ -21,7 +21,7 @@
 
           <li class="list-unstyled mb-2">
             <a class=" text-decoration-none hvr-sweep-to-right pleft0"
-               [routerLink]="['/employee/list']">
+               [routerLink]="['/cage/list']">
               <img src="https://cdn-icons-png.flaticon.com/512/1177/1177455.png"
                    height="20px">
               <span class="text-light">Quản lý chuồng nuôi</span>
@@ -74,18 +74,18 @@
         </ul>
       </div>
     </div>
-    <section class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
-      <div class="container-fluid" >
+    <section class="col-md-10 ms-sm-auto col-lg-10 px-md-4">
+      <div class="container">
         <div class="row pt-2">
           <div class="col-12">
             <div class="card">
-              <div class="container ">
+              <div class="container-fluid ">
                 <h1 class="d-flex justify-content-center pt-3 text-success m-4">Danh sách chuồng nuôi
                 </h1>
                 <div class="row pt-2 m-4">
                   <div class=" ">
                     <div class=" fw-bold float-start">
-                      <button class="btn  btn-success" [routerLink]="['/cage/create']">
+                      <button class="btn  btn-success  " [routerLink]="['/cages/create']">
                         Tạo chuồng
                       </button>
                     </div>
@@ -95,15 +95,16 @@
 
                       <div class="col-md-9  col-lg-9 fw-bold px-2 ">
 
-                        <input [(ngModel)]="searchCage" class="form-control" id="name" [ngModelOptions]="{standalone: true}"
+                        <input [(ngModel)]="searchCage" class="form-control" id="name"
+                               [ngModelOptions]="{standalone: true}"
                                type="text"
                                name="customerName"
-                               placeholder=" Tên NV - Ngày Tạo Chuồng (yyyy-MM-dd) - Loại Chuồng">
+                               placeholder=" Tên NV - Ngày Tạo (yyyy-MM-dd) - Loại Chuồng">
 
                       </div>
                       <div class="col-md-3 ms-sm-auto col-lg-3  ">
                         <div class="float-end">
-                          <button class="btn btn-success" type="submit"  (click)="onsubmit()"> Tìm Kiếm </button>
+                          <button class="btn btn-success" type="submit" (click)="onsubmit()"> Tìm Kiếm</button>
                         </div>
                       </div>
                     </form>
@@ -114,34 +115,38 @@
                 <div class="">
                   <div class="mt-3  table-responsive{-sm|-md|-lg|-xl|-xxl}">
 
-                    <table class="table table-striped table-hover container-fluid">
+                    <table class="table table-striped table-hover">
                       <thead class="text-white bg-success">
-                      <tr class=" text-start">
+                      <tr class="text-start">
                         <th>Mã Chuồng</th>
                         <th>Mã Nhân Viên</th>
                         <th>Họ Và Tên</th>
-                        <th>Ngày Tạo Chuồng</th>
-                        <th>Ngày Đóng Chuồng</th>
+                        <th>Ngày Tạo </th>
+                        <th>Ngày Đóng </th>
                         <th>Loại chuồng</th>
                         <th>Số Lượng Cá Thể</th>
-                        <th colspan="4" >Chỉnh sửa/Xóa</th>
+                        <th colspan="2">Chỉnh sửa</th>
+                        <th colspan="2">Xóa</th>
                       </tr>
                       </thead>
                       <tbody>
                       <tr *ngFor="let cage of cages">
                         <td>{{cage.id}}</td>
                         <td>{{cage.employee.id}}</td>
-                        <td>{{cage.employee.name}}</td>
+                        <td
+                          *ngIf="cage.employee.name.length > 20">{{cage.employee.name | slice:cage.employee.name.length - 20:cage.employee.name.length}}</td>
+                        <td *ngIf="cage.employee.name.length < 20">{{cage.employee.name }}</td>
                         <td>{{cage.openDate | date:"dd/MM/yyyy"}}</td>
                         <td>{{cage.closeDate | date:"dd/MM/yyyy"}}</td>
                         <td>{{cage.typeOfCage.name}}</td>
                         <td>{{cage.quantity}}</td>
                         <td class="text-center">
-                          <button class="btn btn-success text-center text-white" [routerLink]="['/cage/edit/',cage.id]"
-                                  data-bs-toggle="modal"><i class="fas fa-edit"></i> Sửa
+                          <button class="btn btn-success text-center text-white  "
+                                  data-bs-toggle="modal" [routerLink]="['/cages/edit/',cage.id]"
+                          ><i class="fas fa-edit"></i> Sửa
                           </button>
                         <td>
-                        <td >
+                        <td>
                           <button class="btn btn-danger text-center  "
                                   data-bs-toggle="modal"
                           ><i class="fas fa-trash-alt"></i> Xóa
@@ -155,14 +160,14 @@
                       <h4 class="text-danger fst-italic ">{{message}}</h4>
                     </div>
                   </div>
-                  <div class="me-5 pe-4 ">
+                  <div class="me-5 pe-4 " *ngIf="message==''">
                     <ul class="pagination pagination-sm justify-content-end  pagination-lg" style="margin:20px 0">
 
                       <div *ngIf="this.page >0 then previous"></div>
                       <ng-template #previous>
-                        <li class="page-item">
+                        <li class="page-item ">
                           <button
-                            (click)="previousClick(1)" class="page-link" type="button">Trang trước
+                            (click)="previousClick(1)" class="page-link bg-success text-white" type="button">Trang trước
                           </button>
                         </li>
                       </ng-template>
@@ -181,10 +186,12 @@
 
                       </li>
 
-                      <div *ngIf="this.page  < this.totalPages-1 then nexts "></div>
+                      <div *ngIf="this.page  < this.totalPages-1 then nexts"></div>
                       <ng-template #nexts>
                         <li class="page-item">
-                          <button (click)="nextClick(1)" class="page-link" type="button">Trang sau</button>
+                          <button (click)="nextClick(1)" class="page-link bg-success text-white" type="button">Trang
+                            sau
+                          </button>
                         </li>
                       </ng-template>
                     </ul>
@@ -197,4 +204,5 @@
       </div>
     </section>
   </div>
+
 </main>
