--- a/C0721G2-livestock-farm-FE/src/app/component/news/news-list/news-list.component.html
+++ b/C0721G2-livestock-farm-FE/src/app/component/news/news-list/news-list.component.html
@@ -25,6 +25,9 @@
           <img src="https://cdn.dribbble.com/users/683081/screenshots/2728654/exfuse_app_main_nocontent.png">
         </ng-template>
         <ng-template #showList>
+          <div class="col-md-7 col-lg-7 col-xl-7 col-sm-12 mt-2 " *ngIf="check==true">
+              <a class="btn btn-sm btn-success ms-2" [routerLink]="['/news/create']">Đăng tin</a>
+          </div>
           <div class="col-md-5 col-lg-5 col-xl-5 col-sm-12 mt-2">
             <form class="mb-2" #myNgForm="ngForm" (ngSubmit)="onSubmit()">
               <div class="row ">
