--- a/C0721G2-livestock-farm-FE/src/app/component/employee/employee-list/employee-list.component.html
+++ b/C0721G2-livestock-farm-FE/src/app/component/employee/employee-list/employee-list.component.html
@@ -156,7 +156,7 @@
                               <i class="bi bi-envelope-fill">{{employee.email}}</i>
                             </p>
                             <div class="d-grid gap-2 d-md-block text-center">
-                              <button class="btn btn-success custom me-2" type="button">Sửa</button>
+                              <button class="btn btn-success custom me-2" type="button" [routerLink]="['/employee/edit',employee.id]">Sửa</button>
                               <button class="btn btn-danger custom" (click)="openDialog(employee.id)">Xóa</button>
                             </div>
                           </div>
