--- a/C0721G2-livestock-farm-FE/src/app/component/employee/employee-list/employee-list.component.html
+++ b/C0721G2-livestock-farm-FE/src/app/component/employee/employee-list/employee-list.component.html
@@ -79,7 +79,7 @@
           <div class="row justify-content-center">
             <div class="row mt-3">
               <div class="col-12">
-                <h2 class="text-success fw-bold text-center">DANH SÁCH NHÂN VIÊN</h2>
+                <h1 class="text-success fw-bold text-center">DANH SÁCH NHÂN VIÊN</h1>
               </div>
               <div class="row mt-5 mx-5">
                 <div class="col-xxl-3 col-xl-4 col-md-6 mb-3">
@@ -116,8 +116,8 @@
                   </button>
                 </div>
               </div>
-                <ng-container *ngIf="deleteMessenger"><span class="d-flex justify-content-center pt-3 text-danger">{{deleteMessenger}}</span></ng-container>
-                <ng-container *ngIf="emptyMessenger"><span class="d-flex justify-content-center pt-3 text-success">{{emptyMessenger}}</span></ng-container>
+                <ng-container *ngIf="deleteMessenger"><span class="d-flex justify-content-center pt-3 text-success">{{deleteMessenger}}</span></ng-container>
+                <ng-container *ngIf="emptyMessenger"><span class="d-flex justify-content-center pt-3 text-danger">{{emptyMessenger}}</span></ng-container>
               <div class="row mt-3">
                 <div class="container">
                   <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 g-4">
