--- a/C0721G2-livestock-farm-FE/src/app/component/individual/individual-list/individual-list.component.html
+++ b/C0721G2-livestock-farm-FE/src/app/component/individual/individual-list/individual-list.component.html
@@ -81,7 +81,7 @@
           <div class="col-12">
             <div class="card">
               <div class="container ">
-                <h1 class="d-flex justify-content-center pt-3 text-success m-4">DANH SÁCH CÁ THỂ</h1>
+                <h1 class="d-flex justify-content-center pt-3 m-4 text-success fw-bold text-center">DANH SÁCH CÁ THỂ</h1>
                 <form class="row mt-5 mx-2 " (ngSubmit)="onSubmit()">
                   <div class="col-xxl-2 col-xl-4 col-md-6 mb-3">
                     <div class="input-group m-0">
