--- a/C0721G2-livestock-farm-FE/src/app/component/individual/individual-edit/individual-edit.component.html
+++ b/C0721G2-livestock-farm-FE/src/app/component/individual/individual-edit/individual-edit.component.html
@@ -102,7 +102,7 @@
 </div>
 
 
-<div class="modal fade" id="myModaledit2{{currentId}}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true"
+<div class="modal fade" id="myModaledit2{{currentId}}" tabindex="-1" aria-labelledby="exampleModalLabel"
      style="text-align: left">
   <div class="modal-dialog">
     <div class="modal-content">
