--- a/C0721G2-livestock-farm-FE/src/app/component/individual/individual-create/individual-create.component.html
+++ b/C0721G2-livestock-farm-FE/src/app/component/individual/individual-create/individual-create.component.html
@@ -99,7 +99,7 @@
 <!--modal hiện xác nhận-->
 
 <div class="modal fade" id="modal2" role="dialog" tabindex="-1" aria-labelledby="exampleModalLabel"
-     aria-hidden="true" style="text-align: left">
+     style="text-align: left">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header btn-danger">
