--- a/C0721G2-livestock-farm-FE/src/app/component/treatement/treatement-create/treatement-create.component.html
+++ b/C0721G2-livestock-farm-FE/src/app/component/treatement/treatement-create/treatement-create.component.html
@@ -78,20 +78,10 @@
     <section class="col-md-10">
       <div class="container " >
         <div class="row">
-          <div class="col-6">
-            <h4 style="padding-top: 0px" class="text-success" >Đăng ký mới thông tin khám chữa trị</h4>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-12 text-success" >
-            <a href="#"  class="text-decoration-none text-success">Khám chữa trị</a> > <a href="#" class="text-decoration-none text-success">Đăng ký</a></div>
-          <hr>
-        </div>
-        <div class="row">
           <div class="col-12">
             <div class="card">
               <div class="card-header pb-0   bg-success ">
-                <h6  class="text-white ">Form đăng ký </h6>
+                <h6  class="text-white ">Đăng ký mới thông tin khám chữa trị</h6>
               </div>
               <form class="row g-3 needs-validation m-3" method="post" [formGroup]="formCreate"
                     (ngSubmit)="onSubmit()">
