--- a/C0721G2-livestock-farm-FE/src/app/component/treatement/treatement-list/treatement-list.component.html
+++ b/C0721G2-livestock-farm-FE/src/app/component/treatement/treatement-list/treatement-list.component.html
@@ -77,25 +77,11 @@
     </div>
     <section class="col-md-10">
       <div class="container ">
-        <div class="row">
-          <div class="col-6">
-            <h4 style="padding-top: 0px" class="text-success">Thông tin khám chữa trị</h4>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-12" style="color: #009688">
-            <a href="#" class="text-decoration-none text-success">Khám chữa trị</a> > <a href="#"
-                                                                                         class="text-decoration-none text-success">Danh
-            sách</a></div>
-          <hr>
-        </div>
         <div class="row pt-2">
           <div class="col-12">
             <div class="card">
               <div class="container ">
-                <h1 class="d-flex justify-content-center pt-3 text-success">Danh sách khám chữa
-                  trị</h1>
-
+                <h1 class="d-flex justify-content-center pt-3 text-success">DANH SÁCH KHÁM CHỮA TRỊ</h1>
                 <div class="row pt-2 ">
                   <div class=" ">
                     <div class=" fw-bold float-start">
