--- a/C0721G2-livestock-farm-FE/src/app/component/employee/employee-delete/employee-delete.component.html
+++ b/C0721G2-livestock-farm-FE/src/app/component/employee/employee-delete/employee-delete.component.html
@@ -1,7 +1,7 @@
 <div class="modal-dialog">
   <div class="modal-content">
     <div class="modal-header">
-      <p class="modal-title fs-4 text-center text-success">Bạn có muốn xóa nhân viên này ?</p>
+      <p class="modal-title fs-4 text-center text-success">Bạn có muốn xóa nhân viên này không?</p>
     </div>
     <div class="modal-body fs-6 fw-bold text-danger">
       <table class="table">
